Updated search result cards and list cards front end.

--- a/public/index.html
+++ b/public/index.html
@@ -34,12 +34,12 @@
                 class="mdl-layout__header-row site-navigation-row mdl-layout--large-screen-only headerSmallerBackground">
                 <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link"
                         href="/">Home</a>
-                        <a class="mdl-navigation__link"id='myList' href="/portfolio">My
+                    <a class="mdl-navigation__link" id='myList' href="/portfolio">My
                         List</a><a class="mdl-navigation__link" href="/search">Search</a>
-                        <!-- <a class="mdl-navigation__link"
+                    <!-- <a class="mdl-navigation__link"
                         href="/browse">Browse</a> -->
-                        <a class="mdl-navigation__link" id=signout href="#">Signout</a>
-                        <a class="mdl-navigation__link" id='login' href="/login">Login</a>
+                    <a class="mdl-navigation__link" id=signout href="#">Signout</a>
+                    <a class="mdl-navigation__link" id='login' href="/login">Login</a>
                 </nav>
             </div>
         </header>
@@ -71,10 +71,10 @@
 
 
 
+
             <footer class="mdl-mini-footer">
                 <div class="footer-container">
-                    <div class="mdl-logo">&copy; Unitiled. Design: <a href="https://templateflip.com/"
-                            target="_blank">TemplateFlip</a></div>
+                    <div class="mdl-logo">&copy; The Later List. Design: Awkward Turtles</div>
                     <ul class="mdl-mini-footer__link-list">
                         <li><a href="#">Privacy & Terms</a></li>
                     </ul>
